# rust-ages-ice-archive

./: .editorconfig  .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
examples/: agesdeice.rs  agesice.rs
ooz/: README.md  compr_entropy.cpp  compr_kraken.cpp  compr_leviathan.cpp  compr_match_finder.cpp  compr_mermaid.cpp  compr_multiarray.cpp  compr_util.h  compress.cpp  kraken.cpp  match_hasher.h  ooz.vcxproj  ooz.vcxproj.filters  stdafx.h
src/: lib.rs  ooz_sys.rs  read.rs  write.rs
