[package]
name = "ages-ice-archive"
description = "Functions for packing and unpacking SEGA's ICE archive format, used in Phantasy Star Online 2."
version = "0.3.2"
authors = ["Eidolon <furyhunter600@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HybridEidolon/rust-ages-ice-archive"
keywords = ["sega", "modding", "pso2"]
categories = ["compression", "filesystem"]
exclude = [
    ".gitignore",
    ".editorconfig",
    "/.github"
]

[dependencies]
ages-prs = "0.1"
ascii = "1"
block-modes = "0.4"
blowfish = "0.5"
byteorder = "1"
crc = "1"
rand = "0.7"
thiserror = "1"
zerocopy = "0.3"

[dev-dependencies]
anyhow = "1"
structopt = "0.3"

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = ["oodle"]
oodle = ["cc"]

[profile.dev]
opt-level = 3
debug = false

[profile.dev.package."ages-ice-archive"]
opt-level = 0
